# sshguard

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: 2026-03-24-sshguard-ui-optimization-design.md
docs/superpowers/plans/: 2026-03-24-sshguard-ui-optimization-plan.md  2026-03-30-ai-assistant-implementation-plan.md
docs/superpowers/specs/: 2026-03-30-ai-assistant-design.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  client.rs  deepseek.rs  minimax.rs  mod.rs  openai.rs  qwen.rs
src-tauri/src/commands/: ai.rs  mod.rs  servers.rs  sftp.rs  ssh.rs  update.rs
src-tauri/src/sftp/: mod.rs
src-tauri/src/ssh/: manager.rs  mod.rs
src-tauri/src/storage/: database.rs
src/components/: AIChatView.vue  AIFloatingPanel.vue  AIInput.vue  AIMessageList.vue  AISettings.vue  AISplitView.vue  AITerminalView.vue  BatchCommandPanel.vue  FileEditor.vue  ServerForm.vue  ServerTree.vue  SftpPanel.vue  Sidebar.vue  StatusBar.vue  TabBar.vue  TerminalPanel.vue  UpdateDialog.vue
src/stores/: ai.ts  servers.ts  sftp.ts  terminals.ts  update.ts
src/styles/: cyberpunk.css  main.css  variables.css
src/types/: ai.ts  index.ts
src/views/: MainLayout.vue  Settings.vue
